@@ -4728,7 +4728,7 @@ USW00093732	US	NY	1958-1960	39.8	-72.6667	25.9	NEW YORK SHOALS AFS	[3-4]	1	39.8N
 USW00094789	US	NY	1948-2022	40.6386	-73.7622	3.4	NEW YORK JFK INTL AP	[3-4]	4	40.6N 73.8W
 
 Options:
-	-active 1900-1910  -baseline 1971-2000  -color red  -country US  -fmonth 12,1-3,6-8  -location "New York"  -nonetwork -1  -quality 0  -radius 50  -range 1900-1910  -report id  -state NY
+	-active 1900-1910  -baseline 1971-2000  -kmlcolor red  -country US  -fmonth 12,1-3,6-8  -location "New York"  -nonetwork -1  -quality 0  -radius 50  -range 1900-1910  -report detail  -state NY
 
 	Note that quality is a percentage; radius in km
 	Note that nonetwork values mean the following:
