@@ -1,5 +1,13 @@
 Revision history for Perl module libary Windows-GHCN-Fetch
 
+
+v?.?.???       ???-??-??
+  - replaced -kml <file> with -report kml and user-directed stdout
+  - added report types kml, id (just station id's), stn (station tsv only), url, curl
+  - renamed -color to -kmlcolor
+  - removed -label
+  - added #!/usr/bin/perl to ghch_fetch.pl
+
 v0.0.006       2022-10-16
   - fix for ticket 144693 "Can't open ghcn_fetch.pl"
   - fixes for test failures in CacheURI.t arising on systems without internet access
